# meshcore-bots

./: .gitignore  LICENSE  README.md  pyproject.toml
bots/nina/: main.py  main.py.bak-pre-topic-filter-20260621-2237  poll.py  poll.py.bak-pre-topic-filter-20260621-2237
bots/wetter/: format.py  main.py  wetter.env.example  windy.py
shared/: alert.py  matrix_sender.py
systemd/: meshbot-wetter.service
